--- a/templates/dashboard/customer/sales/details.html
+++ b/templates/dashboard/customer/sales/details.html
@@ -102,11 +102,14 @@
 
 {% endblock%}
 {% block custom_js %}
+<script > var back_path = "{{request.path}}";</script>
+<script type="text/javascript" src="{% static 'backend/js/pdf/open-pdf.js' %}"></script>
+
 <script>
     $('.printPdf').on('click', function(){
        var url = $(this).data('url');
         $.get(url, function(data){
-             window.open("data:application/pdf," + escape(data));
+             openPdf(data);
         });
     });
 </script>
