--- a/templates/dashboard/reports/allocate/sales_list.html
+++ b/templates/dashboard/reports/allocate/sales_list.html
@@ -250,6 +250,9 @@
 <script type="text/javascript" src="{% static 'backend/js/plugins/ui/Highcharts-5.0.14/code/modules/drilldown.js' %}"></script>
 <script type="text/javascript" src="{% static 'backend/js/plugins/ui/dom-to-image-master/dom-to-image.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'backend/js/plugins/pickers/bootstrap_datepicker/js/bootstrap-datepicker.min.js' %}"></script>
+<script > var back_path = "{{request.path}}";</script>
+<script type="text/javascript" src="{% static 'backend/js/pdf/open-pdf.js' %}"></script>
+
 <script type="text/javascript">
 var creditPaginationUrl = "{% url 'dashboard:allocate_paginate' %}";
 var creditSearchUrl = "{% url 'dashboard:allocate_search' %}";
@@ -338,7 +341,7 @@ $(document).ready(function(){
         
             paginationData(dynamicData,url,'GET').
              done(function(data){
-                window.open("data:application/pdf," + escape(data));
+                openPdf(data);
              })
             .fail();
 
