--- a/templates/dashboard/reports/sales_tax/tax.html
+++ b/templates/dashboard/reports/sales_tax/tax.html
@@ -178,6 +178,9 @@
   <script type="text/javascript" src="{% static 'backend/js/pages/form_multiselect.js' %}"></script>
 <script type="text/javascript" src="{% static 'backend/js/plugins/forms/selects/bootstrap_select.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'backend/js/plugins/ui/dom-to-image-master/dom-to-image.min.js' %}"></script>
+<script > var back_path = "{{request.path}}";</script>
+<script type="text/javascript" src="{% static 'backend/js/pdf/open-pdf.js' %}"></script>
+
 <script type="text/javascript">
 $('.rangeBtn').on('click', function(){
   $('.rangeDates').slideToggle();
@@ -256,7 +259,7 @@ $('.rangeBtn').on('click', function(){
                         var img = new Image();
                         img.src = dataUrl;
                        $.get("{% url 'dashboard:sales_tax' %}",{pdf:'pdf',image:dataUrl}, function(data){
-                            window.open("data:application/pdf," + escape(data));
+                            openPdf(data);
                         });
                     }).catch(function (error) {
                         console.error('oops, something went wrong!', error);
